--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
+@import "~@fortawesome/fontawesome-free/css/all.css";
 
 body {
     margin: 0;
@@ -18,6 +19,7 @@ code {
 a, a:hover {
     color: gainsboro;
     text-decoration: none;
+    transition: color .25s;
 
 }
 
