--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,13 @@
+@import "~normalize.css/normalize.css";
 @import "~bootstrap/dist/css/bootstrap.min.css";
 @import "~@fortawesome/fontawesome-free/css/all.css";
-
+*,*:before,*:after{
+box-sizing: border-box;
+}
 body {
     margin: 0;
     padding: 0;
+    height: 100%;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
